MOVE-4955 Tilpasse sending til fastlege via NHN til eksisterande meldingstype-mønster i Integrasjonspunktet